--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "drupal": {
             "type": "composer",
             "url": "https://packages.drupal.org/10"
-        },
+        }
         "valeriapesce/agrovoc_taxonomy_create_import_csv": {
             "type": "git",
             "url": "https://github.com/valeriapesce/agrovoc_taxonomy_create_import_csv"
-        }
+        },
     },
     "require": {
         "valeriapesce/agrovoc_taxonomy_create_import_csv": "*",
@@ -32,6 +32,6 @@
 		"drupal/entityreference_extensions": "^1.4",		
 		"drupal/dropdown_language": "^4.0",
 		"drupal/token": "^1.13",		
-		"drupal/taxonomy_term_depth": "^2.6"	
+		"drupal/taxonomy_term_depth": "^2.6",		
     }
 }
