--- a/config/install/core.entity_view_display.taxonomy_term.fao_aims_agrovoc.search_result.yml
+++ b/config/install/core.entity_view_display.taxonomy_term.fao_aims_agrovoc.search_result.yml
@@ -9,6 +9,9 @@ dependencies:
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_narrower
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_note
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_related
+    - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_transliterated_def
+    - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_transliterated_lab
+    - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_transliterated_tit
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_uri
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_uri_link
     - field.field.taxonomy_term.fao_aims_agrovoc.field_fao_agrovoc_code
@@ -42,6 +45,7 @@ third_party_settings:
         - 'dynamic_token_field:taxonomy_term-definition_with_lang'
         - 'dynamic_token_field:taxonomy_term-note_with_lang'
       right:
+        - 'dynamic_token_field:taxonomy_term-skosmos_url'
         - field_agrovoc_alternative_labels
         - field_agrovoc_broader
         - field_agrovoc_narrower
@@ -148,6 +152,38 @@ third_party_settings:
             fi-def-at: false
             prefix: ''
             suffix: ''
+      'dynamic_token_field:taxonomy_term-skosmos_url':
+        plugin_id: 'dynamic_token_field:taxonomy_term-skosmos_url'
+        weight: 3
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            lbw: false
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            lb-col: false
+            ow: true
+            ow-el: div
+            ow-cl: 'align-right clear-right float-none'
+            ow-at: ''
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fis-def-at: false
+            fi: true
+            fi-el: span
+            fi-cl: 'bold small-text'
+            fi-at: ''
+            fi-def-at: false
+            prefix: ''
+            suffix: ''
 id: taxonomy_term.fao_aims_agrovoc.search_result
 targetEntityType: taxonomy_term
 bundle: fao_aims_agrovoc
@@ -183,12 +219,12 @@ content:
             fis-def-at: false
             fi: true
             fi-el: span
-            fi-cl: 'inline right-border padding-right'
+            fi-cl: 'label-multiple inline right-border padding-right'
             fi-at: ''
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 3
+    weight: 4
     region: right
   field_agrovoc_broader:
     type: entity_reference_entity_view_delta
@@ -222,7 +258,7 @@ content:
             lb-col: true
             ow: true
             ow-el: div
-            ow-cl: padding-bottom
+            ow-cl: 'broader-group padding-bottom'
             ow-at: ''
             ow-def-at: false
             ow-def-cl: false
@@ -233,12 +269,12 @@ content:
             fis-def-at: false
             fi: true
             fi-el: span
-            fi-cl: 'inline right-border padding-right'
+            fi-cl: 'term-link-multiple inline right-border padding-right'
             fi-at: ''
             fi-def-at: true
             prefix: ''
             suffix: ''
-    weight: 4
+    weight: 5
     region: right
   field_agrovoc_narrower:
     type: entity_reference_entity_view_delta
@@ -272,7 +308,7 @@ content:
             lb-col: true
             ow: true
             ow-el: div
-            ow-cl: padding-bottom
+            ow-cl: 'narrower-group padding-bottom'
             ow-at: ''
             ow-def-at: false
             ow-def-cl: false
@@ -283,12 +319,12 @@ content:
             fis-def-at: false
             fi: true
             fi-el: span
-            fi-cl: 'inline right-border padding-right'
+            fi-cl: 'term-link-multiple inline right-border padding-right'
             fi-at: ''
             fi-def-at: true
             prefix: ''
             suffix: ''
-    weight: 5
+    weight: 6
     region: right
   field_agrovoc_related:
     type: entity_reference_entity_view_delta
@@ -322,7 +358,7 @@ content:
             lb-col: true
             ow: true
             ow-el: div
-            ow-cl: padding-bottom
+            ow-cl: 'related-group padding-bottom'
             ow-at: ''
             ow-def-at: false
             ow-def-cl: false
@@ -333,17 +369,20 @@ content:
             fis-def-at: false
             fi: true
             fi-el: span
-            fi-cl: 'inline right-border padding-right'
+            fi-cl: 'term-link-multiple inline right-border padding-right'
             fi-at: ''
             fi-def-at: true
             prefix: ''
             suffix: ''
-    weight: 6
+    weight: 7
     region: right
 hidden:
   description: true
   field_agrovoc_definition: true
   field_agrovoc_note: true
+  field_agrovoc_transliterated_def: true
+  field_agrovoc_transliterated_lab: true
+  field_agrovoc_transliterated_tit: true
   field_agrovoc_uri: true
   field_agrovoc_uri_link: true
   field_fao_agrovoc_code: true
