--- a/config/install/core.entity_view_display.taxonomy_term.fao_aims_agrovoc.term_search_link.yml
+++ b/config/install/core.entity_view_display.taxonomy_term.fao_aims_agrovoc.term_search_link.yml
@@ -9,6 +9,9 @@ dependencies:
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_narrower
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_note
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_related
+    - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_transliterated_def
+    - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_transliterated_lab
+    - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_transliterated_tit
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_uri
     - field.field.taxonomy_term.fao_aims_agrovoc.field_agrovoc_uri_link
     - field.field.taxonomy_term.fao_aims_agrovoc.field_fao_agrovoc_code
@@ -73,6 +76,9 @@ hidden:
   field_agrovoc_narrower: true
   field_agrovoc_note: true
   field_agrovoc_related: true
+  field_agrovoc_transliterated_def: true
+  field_agrovoc_transliterated_lab: true
+  field_agrovoc_transliterated_tit: true
   field_agrovoc_uri: true
   field_agrovoc_uri_link: true
   field_fao_agrovoc_code: true
