--- a/config/install/views.view.agrovoc_search_searchapi.yml
+++ b/config/install/views.view.agrovoc_search_searchapi.yml
@@ -226,7 +226,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<b>{{ name }}</b> ({{ search_api_language }}) {{ field_agrovoc_alternative_labels }} '
+            text: '<b>{{ name }}</b> {{ field_agrovoc_alternative_labels }} '
             make_link: false
             path: ''
             absolute: false
@@ -384,6 +384,46 @@ display:
           exposed: false
       arguments: {  }
       filters:
+        search_api_language_1:
+          id: search_api_language_1
+          table: search_api_index_agrovoc
+          field: search_api_language
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: search_api_language
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
         search_api_fulltext:
           id: search_api_fulltext
           table: search_api_index_agrovoc
@@ -432,51 +472,12 @@ display:
           parse_mode: terms
           min_length: 2
           fields:
-            - field_agrovoc_alternative_labels
-            - field_agrovoc_alternative_labels_tr
+            - field_agrovoc_alternative_labels_ft
             - field_agrovoc_definition
-            - name
-            - name_tr
-        search_api_language_1:
-          id: search_api_language_1
-          table: search_api_index_agrovoc
-          field: search_api_language
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: search_api_language
-          operator: in
-          value:
-            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
+            - field_agrovoc_transliterated_def
+            - field_agrovoc_transliterated_lab_1
+            - field_agrovoc_transliterated_tit
+            - name_ft
       filter_groups:
         operator: AND
         groups:
