--- a/config/install/search_api.index.agrovoc.yml
+++ b/config/install/search_api.index.agrovoc.yml
@@ -15,6 +15,8 @@ dependencies:
     - taxonomy_term_depth
     - taxonomy
     - search_api
+_core:
+  default_config_hash: qbL2Ud3fzgbTc9QoKJo267-JvYUQ7wFny6tfCdcwXJM
 id: agrovoc
 name: AGROVOC
 description: ''
@@ -226,6 +228,6 @@ tracker_settings:
     indexing_order: fifo
 options:
   cron_limit: 0
-  index_directly: true
+  index_directly: false
   track_changes_in_references: true
 server: core_database_server_for_agrovoc
