--- a/config/install/search_api.server.core_database_server_for_agrovoc.yml
+++ b/config/install/search_api.server.core_database_server_for_agrovoc.yml
@@ -3,6 +3,8 @@ status: true
 dependencies:
   module:
     - search_api_db
+_core:
+  default_config_hash: pur3Ld1qGGFZqnIyaoFvASCvhA5NqLRMquxUhkpH9nU
 id: core_database_server_for_agrovoc
 name: 'Database server for AGROVOC'
 description: 'Uses the Drupal database for AGROVOC searches'
@@ -14,4 +16,4 @@ backend_config:
   phrase: bigram
   autocomplete:
     suggest_suffix: true
-    suggest_words: true
+    suggest_words: false
