--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,6 @@
         },
     },
     "require": {
-        "valeriapesce/agrovoc_taxonomy_create_import_csv": "*",
         "drupal/search_api": ">=1.3",
 		"drupal/search_api_autocomplete": "^1.8",		
 		"drupal/views_accordion": "^2.0",		
@@ -33,5 +32,13 @@
 		"drupal/dropdown_language": "^4.0",
 		"drupal/token": "^1.13",		
 		"drupal/taxonomy_term_depth": "^2.6",		
-    }
-}
+		"cweagans/composer-patches": "~1.0",
+        "valeriapesce/agrovoc_taxonomy_create_import_csv": "*"
+		}
+	"extra": {
+	"patches": {
+	  "drupal/search_api": {
+		"SarchApi: don't exclude exact matches from suggestions": "https://github.com/valeriapesce/drupal_patches/blob/main/searchapi_include-exact-match-suggestions.patch"
+	  }
+	}
+  }}
