--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
             "url": "https://github.com/valeriapesce/agrovoc_taxonomy_create_import_csv"
         }
     },
+    "config": {
+        "allow-plugins": {
+            "cweagans/composer-patches": true
+        }
+    },
     "require": {
         "drupal/search_api": ">=1.3",
 		"drupal/search_api_autocomplete": "^1.8",		
@@ -36,6 +41,7 @@
         "valeriapesce/agrovoc_taxonomy_create_import_csv": "*"
 	},
 	"extra": {
+		"enable-patching": true,
 		"patches": {
 		  "drupal/search_api": {
 			"SarchApi: don't exclude exact matches from suggestions": "https://github.com/valeriapesce/drupal_patches/blob/main/searchapi_include-exact-match-suggestions.patch"
