--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,11 @@
     },
     "config": {
         "allow-plugins": {
-            "cweagans/composer-patches": true
+            "cweagans/composer-patches": true,
+			"preferred-install": "source"
         }
     },
-    "require": {
+	"require": {
         "drupal/search_api": ">=1.3",
 		"drupal/search_api_autocomplete": "^1.8",		
 		"drupal/views_accordion": "^2.0",		
